2003-09-12	blytkerchan
	* parse.y: update function definition according to results of a 
                   discussion on jail-ust-lang
	* AUTHORS: new file
	* ChangeLog: ditto

2003-07-23	blytkerchan
	* parse.y: new file
