@@ -1,3 +1,6 @@
+2004-07-14	blytkerchan
+	* parse.y: start a second shot at the grammar - restart from scratch
+
 2003-09-12	blytkerchan
 	* parse.y: update function definition according to results of a 
                    discussion on jail-ust-lang
